--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "next": "13.0.0",
     "react": "18.2.0",
@@ -15,6 +18,8 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
