--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
